TestSuite/PascalABCTests/errors/err0342_wrong_dynarr_size.pas
begin
  var b: array [,] of byte := ((1, 2), (3, 4, 5), (5, 6)); 
  b.Println;
end.